--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -38,10 +38,10 @@
      <widget class="QWidget" name="verticalLayoutWidget">
       <property name="geometry">
        <rect>
-        <x>130</x>
+        <x>10</x>
         <y>30</y>
-        <width>461</width>
-        <height>237</height>
+        <width>381</width>
+        <height>421</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -61,14 +61,14 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="dayLabel">
+        <widget class="QLabel" name="dateLabel">
          <property name="font">
           <font>
            <pointsize>35</pointsize>
           </font>
          </property>
          <property name="text">
-          <string>DAY</string>
+          <string>DATE</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -76,14 +76,14 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="dateLabel">
+        <widget class="QLabel" name="dayLabel">
          <property name="font">
           <font>
-           <pointsize>25</pointsize>
+           <pointsize>30</pointsize>
           </font>
          </property>
          <property name="text">
-          <string>DATE</string>
+          <string>DAY</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -95,10 +95,10 @@
      <widget class="QPushButton" name="scanButton">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>320</y>
+        <x>420</x>
+        <y>250</y>
         <width>271</width>
-        <height>111</height>
+        <height>131</height>
        </rect>
       </property>
       <property name="font">
@@ -109,6 +109,48 @@
       <property name="text">
        <string>SCAN</string>
       </property>
+     </widget>
+     <widget class="QWidget" name="verticalLayoutWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>400</x>
+        <y>60</y>
+        <width>320</width>
+        <height>141</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QLabel" name="tempLabel">
+         <property name="font">
+          <font>
+           <pointsize>30</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Temp</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="weatherPhraseLabel">
+         <property name="font">
+          <font>
+           <pointsize>20</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Phrase</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </widget>
     <widget class="QWidget" name="inventory">
