--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -353,7 +353,7 @@
      <widget class="QLineEdit" name="zipEdit">
       <property name="geometry">
        <rect>
-        <x>110</x>
+        <x>170</x>
         <y>120</y>
         <width>91</width>
         <height>41</height>
@@ -389,26 +389,29 @@
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
-     <widget class="QLabel" name="label_2">
+     <widget class="QLabel" name="weatherLabel">
       <property name="geometry">
        <rect>
-        <x>100</x>
-        <y>90</y>
-        <width>56</width>
-        <height>16</height>
+        <x>120</x>
+        <y>80</y>
+        <width>101</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="text">
        <string>Weather</string>
       </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
      </widget>
-     <widget class="QLabel" name="label_3">
+     <widget class="QLabel" name="zipLabel">
       <property name="geometry">
        <rect>
         <x>40</x>
-        <y>130</y>
-        <width>61</width>
-        <height>16</height>
+        <y>128</y>
+        <width>91</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="text">
@@ -418,7 +421,7 @@
      <widget class="QPushButton" name="fullscreenOnButton">
       <property name="geometry">
        <rect>
-        <x>110</x>
+        <x>170</x>
         <y>190</y>
         <width>61</width>
         <height>41</height>
@@ -437,16 +440,16 @@
        <bool>false</bool>
       </property>
       <attribute name="buttonGroup">
-       <string notr="true">buttonGroup</string>
+       <string notr="true">fullscreenButtonGroup</string>
       </attribute>
      </widget>
-     <widget class="QLabel" name="label_4">
+     <widget class="QLabel" name="fullscreenLabel">
       <property name="geometry">
        <rect>
         <x>40</x>
-        <y>200</y>
-        <width>71</width>
-        <height>16</height>
+        <y>199</y>
+        <width>91</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="text">
@@ -456,7 +459,7 @@
      <widget class="QPushButton" name="fullscreenOffButton">
       <property name="geometry">
        <rect>
-        <x>168</x>
+        <x>228</x>
         <y>190</y>
         <width>61</width>
         <height>41</height>
@@ -469,13 +472,13 @@
        <bool>true</bool>
       </property>
       <attribute name="buttonGroup">
-       <string notr="true">buttonGroup</string>
+       <string notr="true">fullscreenButtonGroup</string>
       </attribute>
      </widget>
      <widget class="QPushButton" name="saveZipButton">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>270</x>
         <y>120</y>
         <width>51</width>
         <height>41</height>
@@ -483,6 +486,66 @@
       </property>
       <property name="text">
        <string>Save</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="rotateCameraOnButton">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>250</y>
+        <width>61</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>ON</string>
+      </property>
+      <property name="checkable">
+       <bool>true</bool>
+      </property>
+      <property name="checked">
+       <bool>false</bool>
+      </property>
+      <property name="autoExclusive">
+       <bool>false</bool>
+      </property>
+      <attribute name="buttonGroup">
+       <string notr="true">rotateCameraButtonGroup</string>
+      </attribute>
+     </widget>
+     <widget class="QPushButton" name="rotateCameraOffButton">
+      <property name="geometry">
+       <rect>
+        <x>228</x>
+        <y>250</y>
+        <width>61</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>OFF</string>
+      </property>
+      <property name="checkable">
+       <bool>true</bool>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+      <attribute name="buttonGroup">
+       <string notr="true">rotateCameraButtonGroup</string>
+      </attribute>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>260</y>
+        <width>121</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Rotate Camera:</string>
       </property>
      </widget>
     </widget>
@@ -756,6 +819,7 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup"/>
+  <buttongroup name="fullscreenButtonGroup"/>
+  <buttongroup name="rotateCameraButtonGroup"/>
  </buttongroups>
 </ui>
