--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,225 +19,7 @@
    <string>Foodventory</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget
-    {
-        color: #b1b1b1;
-        background-color: #323232;
-    }
-
-
-    QWidget:item:selected
-    {
-        background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #00eaff);
-    }
-
-    QWidget:disabled
-    {
-        color: #404040;
-        background-color: #323232;
-    }
-
-    QAbstractItemView
-    {
-        background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #4d4d4d, stop: 0.1 #646464, stop: 1 #5d5d5d);
-    }
-
-    QWidget:focus
-    {
-        /*border: 2px solid QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #00eaff);*/
-    }
-
-    QLineEdit
-    {
-        background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #4d4d4d, stop: 0 #646464, stop: 1 #5d5d5d);
-        padding: 1px;
-        border-style: solid;
-        border: 1px solid #1e1e1e;
-        border-radius: 5;
-    }
-
-    QPushButton
-    {
-        color: #b1b1b1;
-        background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #565656, stop: 0.1 #525252, stop: 0.5 #4e4e4e, stop: 0.9 #4a4a4a, stop: 1 #464646);
-        border-width: 1px;
-        border-color: #1e1e1e;
-        border-style: solid;
-        border-radius: 6;
-        padding: 3px;
-        font-size: 12px;
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-
-    QPushButton:pressed
-    {
-        background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #2d2d2d, stop: 0.1 #2b2b2b, stop: 0.5 #292929, stop: 0.9 #282828, stop: 1 #252525);
-    }
-
-    QPushButton:checked
-    {
-        background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #2d2d2d, stop: 0.1 #2b2b2b, stop: 0.5 #292929, stop: 0.9 #282828, stop: 1 #252525);
-    }
-
-    QComboBox
-    {
-        selection-background-color: #ffaa00;
-        background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #565656, stop: 0.1 #525252, stop: 0.5 #4e4e4e, stop: 0.9 #4a4a4a, stop: 1 #464646);
-        border-style: solid;
-        border: 1px solid #1e1e1e;
-        border-radius: 5;
-    }
-
-    QComboBox:hover,QPushButton:hover
-    {
-        border: 2px solid QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #00eaff);
-    }
-
-
-    QComboBox:on
-    {
-        padding-top: 3px;
-        padding-left: 4px;
-        background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #2d2d2d, stop: 0.1 #2b2b2b, stop: 0.5 #292929, stop: 0.9 #282828, stop: 1 #252525);
-        selection-background-color: #ffaa00;
-    }
-
-    QComboBox QAbstractItemView
-    {
-        border: 2px solid darkgray;
-        selection-background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #00eaff);
-    }
-
-    QComboBox::drop-down
-    {
-         subcontrol-origin: padding;
-         subcontrol-position: top right;
-         width: 15px;
-
-         border-left-width: 0px;
-         border-left-color: darkgray;
-         border-left-style: solid; /* just a single line */
-         border-top-right-radius: 3px; /* same radius as the QComboBox */
-         border-bottom-right-radius: 3px;
-     }
-
-     QTextEdit:focus
-     {
-         border: 2px solid QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #00eaff);
-     }
-
-     QScrollBar:horizontal {
-          border: 1px solid #222222;
-          background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0.0 #121212, stop: 0.2 #282828, stop: 1 #484848);
-          height: 7px;
-          margin: 0px 16px 0 16px;
-     }
-
-     QScrollBar::handle:horizontal
-     {
-           background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #ffa02f, stop: 0.5 #00eaff, stop: 1 #ffa02f);
-           min-height: 20px;
-           border-radius: 2px;
-     }
-
-     QScrollBar::add-line:horizontal {
-           border: 1px solid #1b1b19;
-           border-radius: 2px;
-           background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #ffa02f, stop: 1 #00eaff);
-           width: 14px;
-           subcontrol-position: right;
-           subcontrol-origin: margin;
-     }
-
-     QScrollBar::sub-line:horizontal {
-           border: 1px solid #1b1b19;
-           border-radius: 2px;
-           background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #ffa02f, stop: 1 #00eaff);
-           width: 14px;
-          subcontrol-position: left;
-          subcontrol-origin: margin;
-     }
-
-     QScrollBar::right-arrow:horizontal, QScrollBar::left-arrow:horizontal
-     {
-           border: 1px solid black;
-           width: 1px;
-           height: 1px;
-           background: white;
-     }
-
-     QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
-     {
-           background: none;
-     }
-
-     QScrollBar:vertical
-     {
-           background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0.0 #121212, stop: 0.2 #282828, stop: 1 #484848);
-           width: 7px;
-           margin: 16px 0 16px 0;
-           border: 1px solid #222222;
-     }
-
-     QScrollBar::handle:vertical
-     {
-           background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 0.5 #00eaff, stop: 1 #ffa02f);
-           min-height: 20px;
-           border-radius: 2px;
-     }
-
-     QScrollBar::add-line:vertical
-     {
-           border: 1px solid #1b1b19;
-           border-radius: 2px;
-           background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #00eaff);
-           height: 14px;
-           subcontrol-position: bottom;
-           subcontrol-origin: margin;
-     }
-
-     QScrollBar::sub-line:vertical
-     {
-           border: 1px solid #1b1b19;
-           border-radius: 2px;
-           background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #00eaff, stop: 1 #ffa02f);
-           height: 14px;
-           subcontrol-position: top;
-           subcontrol-origin: margin;
-     }
-
-     QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical
-     {
-           border: 1px solid black;
-           width: 1px;
-           height: 1px;
-           background: white;
-     }
-
-
-     QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical
-     {
-           background: none;
-     }
-
-     QTextEdit
-     {
-         background-color: #242424;
-     }
-
-     QHeaderView::section
-     {
-         background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:0 #616161, stop: 0.5 #505050, stop: 0.6 #434343, stop:1 #656565);
-         color: white;
-         padding-left: 4px;
-         border: 1px solid #6c6c6c;
-     }
-
-
-     QTableView QTableCornerButton::section{
-        background: #323232;
-     }</string>
+   <string notr="true"/>
   </property>
   <property name="tabShape">
    <enum>QTabWidget::Rounded</enum>
@@ -259,10 +41,10 @@
      <widget class="QWidget" name="verticalLayoutWidget">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>30</y>
-        <width>381</width>
-        <height>251</height>
+        <x>20</x>
+        <y>10</y>
+        <width>350</width>
+        <height>421</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -277,7 +59,7 @@
           <string>TIME</string>
          </property>
          <property name="alignment">
-          <set>Qt::AlignCenter</set>
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
@@ -285,14 +67,14 @@
         <widget class="QLabel" name="dateLabel">
          <property name="font">
           <font>
-           <pointsize>35</pointsize>
+           <pointsize>40</pointsize>
           </font>
          </property>
          <property name="text">
           <string>DATE</string>
          </property>
          <property name="alignment">
-          <set>Qt::AlignCenter</set>
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
@@ -300,14 +82,14 @@
         <widget class="QLabel" name="dayLabel">
          <property name="font">
           <font>
-           <pointsize>30</pointsize>
+           <pointsize>35</pointsize>
           </font>
          </property>
          <property name="text">
           <string>DAY</string>
          </property>
          <property name="alignment">
-          <set>Qt::AlignCenter</set>
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
@@ -316,16 +98,14 @@
      <widget class="QPushButton" name="scanButton">
       <property name="geometry">
        <rect>
-        <x>220</x>
+        <x>400</x>
         <y>310</y>
         <width>271</width>
         <height>131</height>
        </rect>
       </property>
       <property name="font">
-       <font>
-        <pointsize>-1</pointsize>
-       </font>
+       <font/>
       </property>
       <property name="text">
        <string>SCAN</string>
@@ -334,10 +114,10 @@
      <widget class="QWidget" name="verticalLayoutWidget_2">
       <property name="geometry">
        <rect>
-        <x>390</x>
-        <y>60</y>
-        <width>320</width>
-        <height>221</height>
+        <x>370</x>
+        <y>100</y>
+        <width>360</width>
+        <height>171</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -366,7 +146,7 @@
         <widget class="QLabel" name="tempLabel">
          <property name="font">
           <font>
-           <pointsize>30</pointsize>
+           <pointsize>25</pointsize>
           </font>
          </property>
          <property name="text">
@@ -401,7 +181,7 @@
       <property name="geometry">
        <rect>
         <x>660</x>
-        <y>20</y>
+        <y>40</y>
         <width>61</width>
         <height>51</height>
        </rect>
@@ -415,15 +195,15 @@
      <widget class="QTableView" name="tableView">
       <property name="geometry">
        <rect>
-        <x>-1</x>
+        <x>1</x>
         <y>0</y>
-        <width>667</width>
+        <width>661</width>
         <height>441</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>8</pointsize>
+        <pointsize>10</pointsize>
        </font>
       </property>
       <property name="sortingEnabled">
@@ -433,8 +213,8 @@
      <widget class="QPushButton" name="invAddButton">
       <property name="geometry">
        <rect>
-        <x>664</x>
-        <y>-1</y>
+        <x>661</x>
+        <y>0</y>
         <width>71</width>
         <height>101</height>
        </rect>
@@ -446,8 +226,8 @@
      <widget class="QPushButton" name="invDeleteButton">
       <property name="geometry">
        <rect>
-        <x>664</x>
-        <y>97</y>
+        <x>661</x>
+        <y>100</y>
         <width>71</width>
         <height>101</height>
        </rect>
@@ -478,9 +258,9 @@
       <property name="geometry">
        <rect>
         <x>340</x>
-        <y>439</y>
+        <y>440</y>
         <width>250</width>
-        <height>43</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="text">
@@ -490,7 +270,7 @@
      <widget class="QPushButton" name="invInstructionsButton">
       <property name="geometry">
        <rect>
-        <x>664</x>
+        <x>661</x>
         <y>270</y>
         <width>71</width>
         <height>101</height>
@@ -565,9 +345,26 @@
         <x>50</x>
         <y>50</y>
         <width>421</width>
-        <height>390</height>
+        <height>421</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="dragDropMode">
+       <enum>QAbstractItemView::NoDragDrop</enum>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>false</bool>
+      </property>
+      <property name="showGrid">
+       <bool>false</bool>
+      </property>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>30</number>
+      </attribute>
      </widget>
     </widget>
     <widget class="QWidget" name="settings">
@@ -657,8 +454,8 @@
        <rect>
         <x>170</x>
         <y>190</y>
-        <width>61</width>
-        <height>41</height>
+        <width>60</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="text">
@@ -693,10 +490,10 @@
      <widget class="QPushButton" name="fullscreenOffButton">
       <property name="geometry">
        <rect>
-        <x>228</x>
+        <x>230</x>
         <y>190</y>
-        <width>61</width>
-        <height>41</height>
+        <width>60</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="text">
@@ -714,7 +511,7 @@
        <rect>
         <x>270</x>
         <y>120</y>
-        <width>51</width>
+        <width>60</width>
         <height>41</height>
        </rect>
       </property>
@@ -727,8 +524,8 @@
        <rect>
         <x>170</x>
         <y>250</y>
-        <width>61</width>
-        <height>41</height>
+        <width>60</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="text">
@@ -750,10 +547,10 @@
      <widget class="QPushButton" name="rotateCameraOffButton">
       <property name="geometry">
        <rect>
-        <x>228</x>
+        <x>230</x>
         <y>250</y>
-        <width>61</width>
-        <height>41</height>
+        <width>60</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="text">
@@ -780,6 +577,66 @@
       </property>
       <property name="text">
        <string>Rotate Camera:</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="hideCursorOffButton">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>310</y>
+        <width>60</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>OFF</string>
+      </property>
+      <property name="checkable">
+       <bool>true</bool>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+      <attribute name="buttonGroup">
+       <string notr="true">hideCursorButtonGroup</string>
+      </attribute>
+     </widget>
+     <widget class="QPushButton" name="hideCursorOnButton">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>310</y>
+        <width>60</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>ON</string>
+      </property>
+      <property name="checkable">
+       <bool>true</bool>
+      </property>
+      <property name="checked">
+       <bool>false</bool>
+      </property>
+      <property name="autoExclusive">
+       <bool>false</bool>
+      </property>
+      <attribute name="buttonGroup">
+       <string notr="true">hideCursorButtonGroup</string>
+      </attribute>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>321</y>
+        <width>101</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Hide Cursor:</string>
       </property>
      </widget>
     </widget>
@@ -998,16 +855,14 @@
    <widget class="QPushButton" name="homeButton">
     <property name="geometry">
      <rect>
-      <x>-1</x>
+      <x>0</x>
       <y>0</y>
       <width>70</width>
       <height>120</height>
      </rect>
     </property>
     <property name="font">
-     <font>
-      <pointsize>-1</pointsize>
-     </font>
+     <font/>
     </property>
     <property name="text">
      <string>HOME</string>
@@ -1016,16 +871,14 @@
    <widget class="QPushButton" name="invButton">
     <property name="geometry">
      <rect>
-      <x>-1</x>
+      <x>0</x>
       <y>120</y>
       <width>70</width>
       <height>120</height>
      </rect>
     </property>
     <property name="font">
-     <font>
-      <pointsize>-1</pointsize>
-     </font>
+     <font/>
     </property>
     <property name="text">
      <string>INV</string>
@@ -1034,16 +887,14 @@
    <widget class="QPushButton" name="listButton">
     <property name="geometry">
      <rect>
-      <x>-1</x>
+      <x>0</x>
       <y>240</y>
       <width>70</width>
       <height>120</height>
      </rect>
     </property>
     <property name="font">
-     <font>
-      <pointsize>-1</pointsize>
-     </font>
+     <font/>
     </property>
     <property name="text">
      <string>LIST</string>
@@ -1052,16 +903,14 @@
    <widget class="QPushButton" name="settingsButton">
     <property name="geometry">
      <rect>
-      <x>-1</x>
+      <x>0</x>
       <y>360</y>
       <width>70</width>
       <height>120</height>
      </rect>
     </property>
     <property name="font">
-     <font>
-      <pointsize>-1</pointsize>
-     </font>
+     <font/>
     </property>
     <property name="text">
      <string>SETTINGS</string>
@@ -1074,5 +923,6 @@
  <buttongroups>
   <buttongroup name="fullscreenButtonGroup"/>
   <buttongroup name="rotateCameraButtonGroup"/>
+  <buttongroup name="hideCursorButtonGroup"/>
  </buttongroups>
 </ui>
