Search UPC online

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -206,6 +206,9 @@
         <pointsize>10</pointsize>
        </font>
       </property>
+      <property name="textElideMode">
+       <enum>Qt::ElideNone</enum>
+      </property>
       <property name="sortingEnabled">
        <bool>true</bool>
       </property>
@@ -291,8 +294,8 @@
        <rect>
         <x>1</x>
         <y>0</y>
-        <width>27</width>
-        <height>35</height>
+        <width>26</width>
+        <height>34</height>
        </rect>
       </property>
       <property name="text">
@@ -696,7 +699,7 @@
        <rect>
         <x>70</x>
         <y>20</y>
-        <width>171</width>
+        <width>250</width>
         <height>41</height>
        </rect>
       </property>
@@ -714,7 +717,7 @@
        <rect>
         <x>70</x>
         <y>80</y>
-        <width>171</width>
+        <width>250</width>
         <height>41</height>
        </rect>
       </property>
@@ -732,7 +735,7 @@
        <rect>
         <x>70</x>
         <y>260</y>
-        <width>171</width>
+        <width>250</width>
         <height>41</height>
        </rect>
       </property>
@@ -751,7 +754,7 @@
      <widget class="QPushButton" name="manualAddButton">
       <property name="geometry">
        <rect>
-        <x>540</x>
+        <x>560</x>
         <y>130</y>
         <width>131</width>
         <height>81</height>
@@ -764,7 +767,7 @@
      <widget class="QPushButton" name="manualCancelButton">
       <property name="geometry">
        <rect>
-        <x>540</x>
+        <x>560</x>
         <y>250</y>
         <width>131</width>
         <height>81</height>
@@ -777,7 +780,7 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>330</x>
+        <x>390</x>
         <y>60</y>
         <width>81</width>
         <height>31</height>
@@ -795,7 +798,7 @@
      <widget class="QPushButton" name="barcodeScanButton">
       <property name="geometry">
        <rect>
-        <x>300</x>
+        <x>360</x>
         <y>220</y>
         <width>131</width>
         <height>81</height>
@@ -808,7 +811,7 @@
      <widget class="QDoubleSpinBox" name="quantitySpinBox">
       <property name="geometry">
        <rect>
-        <x>280</x>
+        <x>340</x>
         <y>110</y>
         <width>181</width>
         <height>91</height>
@@ -844,7 +847,7 @@
        <rect>
         <x>70</x>
         <y>140</y>
-        <width>171</width>
+        <width>250</width>
         <height>41</height>
        </rect>
       </property>
@@ -859,7 +862,7 @@
        <rect>
         <x>70</x>
         <y>200</y>
-        <width>171</width>
+        <width>250</width>
         <height>41</height>
        </rect>
       </property>
